Initial commit. Flyttet filer

--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,16 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+# IDEs and editors
+/.idea
+.c9/
+*.sublime-workspace
+
+*.swp
+*.*~
+project.lock.json
+.DS_Store
+*.pyc
+nupkg/
+
