--- a/KS.Fiks.IO.Arkivintegrasjon.Client/KS.Fiks.IO.Arkivintegrasjon.Client.csproj
+++ b/KS.Fiks.IO.Arkivintegrasjon.Client/KS.Fiks.IO.Arkivintegrasjon.Client.csproj
@@ -20,6 +20,7 @@
         <RootNamespace>KS.Fiks.IO.Arkivintegrasjon.Client</RootNamespace>
         <IncludeSymbols>true</IncludeSymbols>
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <VersionPrefix>2.0.0</VersionPrefix>
     </PropertyGroup>
 
     <ItemGroup>
