--- a/KS.Fiks.IO.Arkivintegrasjon.Client.Tests/KS.Fiks.IO.Arkivintegrasjon.Client.Tests.csproj
+++ b/KS.Fiks.IO.Arkivintegrasjon.Client.Tests/KS.Fiks.IO.Arkivintegrasjon.Client.Tests.csproj
@@ -14,4 +14,8 @@
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\KS.Fiks.IO.Arkivintegrasjon.Client.Sample.Messages\KS.Fiks.IO.Arkivintegrasjon.Client.Sample.Messages.csproj" />
+    </ItemGroup>
+
 </Project>
