--- a/KS.Fiks.IO.Arkivintegrasjon.Client.Tests/KS.Fiks.IO.Arkivintegrasjon.Client.Tests.csproj
+++ b/KS.Fiks.IO.Arkivintegrasjon.Client.Tests/KS.Fiks.IO.Arkivintegrasjon.Client.Tests.csproj
@@ -15,7 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\KS.Fiks.IO.Arkivintegrasjon.Client.Sample.Messages\KS.Fiks.IO.Arkivintegrasjon.Client.Sample.Messages.csproj" />
+      <ProjectReference Include="..\KS.Fiks.IO.Arkivintegrasjon.Client\KS.Fiks.IO.Arkivintegrasjon.Client.csproj" />
     </ItemGroup>
 
 </Project>
