--- a/KS.Fiks.IO.Arkiv.Client/KS.Fiks.IO.Arkiv.Client.csproj
+++ b/KS.Fiks.IO.Arkiv.Client/KS.Fiks.IO.Arkiv.Client.csproj
@@ -41,12 +41,21 @@
     </ItemGroup>
 
     <ItemGroup>
-      <None Remove="Schema\arkivmelding.xsd" />
-      <Content Include="Schema\arkivmelding.xsd" CopyToOutputDirectory="Always"/>
-      <None Remove="Schema\metadatakatalog.xsd"/>
-      <Content Include="Schema\metadatakatalog.xsd" CopyToOutputDirectory="Always"/>
-      <None Remove="Schema\sok.xsd" />
-      <Content Include="Schema\sok.xsd" CopyToOutputDirectory="Always"/>
+      <Content Include="Schema\arkivmelding.xsd">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+          <Pack>true</Pack>
+          <PackagePath>Schema</PackagePath>
+      </Content>
+      <Content Include="Schema\metadatakatalog.xsd">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+          <Pack>true</Pack>
+          <PackagePath>Schema</PackagePath>
+      </Content>
+      <Content Include="Schema\sok.xsd">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+          <Pack>true</Pack>
+          <PackagePath>Schema</PackagePath>
+      </Content>
     </ItemGroup>
 
 </Project>
