Endret hvor xsd filene havnet i nuget pakken slik at de forhåpentligvis kan lettere konsumeres.

--- a/KS.Fiks.IO.Arkiv.Client/KS.Fiks.IO.Arkiv.Client.csproj
+++ b/KS.Fiks.IO.Arkiv.Client/KS.Fiks.IO.Arkiv.Client.csproj
@@ -44,17 +44,17 @@
       <Content Include="Schema\arkivmelding.xsd">
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
           <Pack>true</Pack>
-          <PackagePath>Schema</PackagePath>
+          <PackageCopyToOutput>true</PackageCopyToOutput>
       </Content>
       <Content Include="Schema\metadatakatalog.xsd">
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
           <Pack>true</Pack>
-          <PackagePath>Schema</PackagePath>
+          <PackageCopyToOutput>true</PackageCopyToOutput>
       </Content>
       <Content Include="Schema\sok.xsd">
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
           <Pack>true</Pack>
-          <PackagePath>Schema</PackagePath>
+          <PackageCopyToOutput>true</PackageCopyToOutput>
       </Content>
     </ItemGroup>
 
