Utkast til sokeresultat.xsd

--- a/KS.Fiks.IO.Arkiv.Client/KS.Fiks.IO.Arkiv.Client.csproj
+++ b/KS.Fiks.IO.Arkiv.Client/KS.Fiks.IO.Arkiv.Client.csproj
@@ -56,6 +56,11 @@
           <Pack>true</Pack>
           <PackageCopyToOutput>true</PackageCopyToOutput>
       </Content>
+      <Content Include="Schema\sokeresultat.xsd">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        <Pack>true</Pack>
+        <PackageCopyToOutput>true</PackageCopyToOutput>
+      </Content>
     </ItemGroup>
 
 </Project>
