Fikset på imports og navn/id for å kunne generere kode vha scripts

--- a/KS.Fiks.IO.Arkiv.Client/KS.Fiks.IO.Arkiv.Client.csproj
+++ b/KS.Fiks.IO.Arkiv.Client/KS.Fiks.IO.Arkiv.Client.csproj
@@ -84,4 +84,8 @@
       <None Remove="Schema\arkivstrukturSokeresultat.xsd" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Schema\Output" />
+    </ItemGroup>
+
 </Project>
