Unit-test som bruker xsd for å sjekke at xsd filer kan genereres til kode. Bruker xunit i stedet for nunit i alle tester.

--- a/KS.Fiks.IO.Arkiv.Client/KS.Fiks.IO.Arkiv.Client.csproj
+++ b/KS.Fiks.IO.Arkiv.Client/KS.Fiks.IO.Arkiv.Client.csproj
@@ -82,6 +82,12 @@
         <PackageCopyToOutput>true</PackageCopyToOutput>
       </Content>
       <None Remove="Schema\arkivstrukturSokeresultat.xsd" />
+      <None Remove="Schema\arkivstruktur.xsd" />
+      <Content Include="Schema\arkivstruktur.xsd">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        <Pack>true</Pack>
+        <PackageCopyToOutput>true</PackageCopyToOutput>
+      </Content>
     </ItemGroup>
 
     <ItemGroup>
