--- a/KS.Fiks.IO.Arkiv.Client.Tests/KS.Fiks.IO.Arkiv.Client.Tests.csproj
+++ b/KS.Fiks.IO.Arkiv.Client.Tests/KS.Fiks.IO.Arkiv.Client.Tests.csproj
@@ -9,13 +9,16 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="NUnit" Version="3.12.0" />
-        <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+        <PackageReference Include="xunit" Version="2.4.1" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\KS.Fiks.IO.Arkiv.Client\KS.Fiks.IO.Arkiv.Client.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Integrasjonstester\Scripts\genSokSchemaClasses.sh" />
     </ItemGroup>
 
 </Project>
