--- a/KS.Fiks.IO.Arkiv.Client.Tests/KS.Fiks.IO.Arkiv.Client.Tests.csproj
+++ b/KS.Fiks.IO.Arkiv.Client.Tests/KS.Fiks.IO.Arkiv.Client.Tests.csproj
@@ -2,20 +2,24 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
-
         <IsPackable>false</IsPackable>
-
         <LangVersion>9</LangVersion>
+        <OutputType>Library</OutputType>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="NUnit" Version="3.12.0" />
-        <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+        <PackageReference Include="NUnit" Version="3.13.2" />
+        <PackageReference Include="NUnit.ConsoleRunner" Version="3.12.0" />
+        <PackageReference Include="NUnit.Runners" Version="3.12.0" />
+        <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\KS.Fiks.IO.Arkiv.Client\KS.Fiks.IO.Arkiv.Client.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove="Integrasjonstester\Scripts\genSokSchemaClasses.sh" />
+    </ItemGroup>
 </Project>
