Lagt til utkast til arkivmeldingKvittering (#5)
* Lagt til utkast til arkivmeldingKvittering. Foreløpig helt lik arkivmelding.

* Forslag til skrelt versjon

* Tatt bort utlaan felter

* Lagt tilbake referanseEksternNoekkel

* Oppdatert arkivmeldingKvittering.xsd i henhold til kommentarer

* Tatt bort dokumentetsDato

--- a/KS.Fiks.IO.Arkiv.Client/KS.Fiks.IO.Arkiv.Client.csproj
+++ b/KS.Fiks.IO.Arkiv.Client/KS.Fiks.IO.Arkiv.Client.csproj
@@ -46,6 +46,11 @@
           <Pack>true</Pack>
           <PackageCopyToOutput>true</PackageCopyToOutput>
       </Content>
+      <Content Include="Schema\arkivmeldingKvittering.xsd">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        <Pack>true</Pack>
+        <PackageCopyToOutput>true</PackageCopyToOutput>
+      </Content>
       <Content Include="Schema\arkivstrukturMinimum.xsd">
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
           <Pack>true</Pack>
