--- a/KS.Fiks.IO.Arkiv.Client.Tests/KS.Fiks.IO.Arkiv.Client.Tests.csproj
+++ b/KS.Fiks.IO.Arkiv.Client.Tests/KS.Fiks.IO.Arkiv.Client.Tests.csproj
@@ -13,6 +13,7 @@
         <PackageReference Include="NUnit.ConsoleRunner" Version="3.12.0" />
         <PackageReference Include="NUnit.Runners" Version="3.12.0" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
+        <PackageReference Include="XmlSchemaClassGenerator-beta" Version="2.0.629" />
     </ItemGroup>
 
     <ItemGroup>
