--- a/KS.Fiks.IO.Arkiv.Client.Integration.Tests/KS.Fiks.IO.Arkiv.Client.Integration.Tests/KS.Fiks.IO.Arkiv.Client.Integration.Tests.csproj
+++ b/KS.Fiks.IO.Arkiv.Client.Integration.Tests/KS.Fiks.IO.Arkiv.Client.Integration.Tests/KS.Fiks.IO.Arkiv.Client.Integration.Tests.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="NUnit" Version="3.13.2" />
       <PackageReference Include="NUnit.Runners" Version="3.12.0" />
       <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
+      <PackageReference Include="XmlSchemaClassGenerator-beta" Version="2.0.629" />
     </ItemGroup>
 
 </Project>
