--- a/KS.Fiks.IO.Arkiv.Client.Integration.Tests/KS.Fiks.IO.Arkiv.Client.Integration.Tests/KS.Fiks.IO.Arkiv.Client.Integration.Tests.csproj
+++ b/KS.Fiks.IO.Arkiv.Client.Integration.Tests/KS.Fiks.IO.Arkiv.Client.Integration.Tests/KS.Fiks.IO.Arkiv.Client.Integration.Tests.csproj
@@ -6,7 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="KS.Fiks.IO.Arkiv.Client" Version="2.0.5-build.20211119095636508" />
+      <PackageReference Include="KS.Fiks.IO.Arkiv.Client" Version="2.0.8" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
       <PackageReference Include="NUnit" Version="3.13.2" />
       <PackageReference Include="NUnit.Runners" Version="3.12.0" />
